# python-learning-snippets

./: README.md
basics/: accumulating_with_python_dict.ipynb  assigning_to_a_variable_vs._list_element.ipynb  assignment_expressions_aka_walrus_operator.ipynb  async_await___asyncio.ipynb  bytes_and_encoding.ipynb  comparing_different_types.ipynb  consistency_in_python.ipynb  deep_vs._shallow_copies.ipynb  else_clauses_on_loops.ipynb  equality_vs_identity.ipynb  exception_handling.ipynb  generator_internals.ipynb  identifiers.ipynb  import_vs_from_import.ipynb  list_vs_array.ipynb  lists_vs_tuples.ipynb  main_and_import.ipynb  modules_packages_and_distribution.ipynb  mutable_vs_immutable.ipynb  passing_dicts_when_functions_take_kwargs.ipynb  plus_equals_vs._plus_and_equals.ipynb  python_and_unicode_characters.ipynb  python_exit_codes.ipynb  scope.ipynb  slicing_and_comprehension.ipynb  sorting_list_tuples_and_objects.ipynb  strings_immutability___+=.ipynb  vars_use_cases.ipynb
decorators_and_generators/: decorators.ipynb  generators.ipynb
flask/2-creating-url-routes/: index.py
flask/3-styling-flasks/: index.py
functional_programming/: main.ipynb
ml_libraries/matplotlib/: introduction.ipynb
ml_libraries/numpy/: introduction.ipynb
object_oriented_approach/: init_method.ipynb  intro_oops.ipynb  oops_part_1.ipynb
python_libs/apscheduler/: index.py
python_libs/poetry/: commands.txt
python_libs/poetry/poet/: pyproject.toml
regex/: regex.py  regex_notebook.ipynb  task.py
tips_and_tricks/: common_mistakes_and_how_to_fix_them.ipynb  tips_and_tricks_s1.ipynb
(+9 files in other folders)
